# sq-UI

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
include/: border.hpp  child.hpp  color.hpp  gestureDetector.hpp  invisibleWidget.hpp  key.hpp  margin.hpp  overlay.hpp  rect.hpp  screen.hpp  transition.hpp  vec2.hpp  widget.hpp  widgetWithChild.hpp  widgetWithChildren.hpp
include/Widgets/: CustomButton.hpp  align.hpp  box.hpp  column.hpp  layoutMenu.hpp  performanceOverlay.hpp  row.hpp  scrollBar.hpp  scrollable.hpp  scrollableWithScrollbar.hpp  stack.hpp  text.hpp  textBox.hpp  textButton.hpp  textInput.hpp  topnav.hpp
src/: color.cpp  gestureDetector.cpp  invisibleWidget.cpp  margin.cpp  overlay.cpp  rect.cpp  screen.cpp  transition.cpp  vec2.cpp  widget.cpp  widgetWithChild.cpp  widgetWithChildren.cpp
src/Widgets/: CustomButton.cpp  align.cpp  box.cpp  column.cpp  layoutMenu.cpp  performanceOverlay.cpp  row.cpp  scrollBar.cpp  scrollable.cpp  scrollableWithScrollbar.cpp  stack.cpp  text.cpp  textBox.cpp  textButton.cpp  textInput.cpp  topnav.cpp
